--- a/package.json
+++ b/package.json
@@ -9,19 +9,21 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/node": "^24.1.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "typescript": "~5.8.3",
     "vite": "^7.0.6"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.83.0",
+    "@tanstack/react-query": "^5.84.1",
     "@vitejs/plugin-react": "^4.7.0",
     "axios": "^1.11.0",
     "formik": "^2.4.6",
     "modern-normalize": "^3.0.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "next": "^15.4.5",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-paginate": "^8.3.0",
     "use-debounce": "^10.0.5",
     "yup": "^1.6.1"
